--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
         </div>
     </nav>
 <!-- Main -->
+    <div class="container_main">
+        <div class="post_container"></div>
+    </div>
 </body>
 </html>
