--- a/index.html
+++ b/index.html
@@ -27,8 +27,39 @@
         </div>
     </nav>
 <!-- Main -->
-    <div class="container_main">
-        <div class="post_container"></div>
-    </div>
+    <section class="main">
+        <div class="container">
+            <div class="status_container">
+                <div class="status">
+                    <div class="profile_img"><img src="./img/bob.jpg" alt=""></div>
+                    <p class="username">Bob_Pancakes</p>
+                </div>
+                <div class="status">
+                    <div class="profile_img"><img src="./img/filly.jpg" alt=""></div>
+                    <p class="username">Filly_Fally</p>
+                </div>
+                <div class="status">
+                    <div class="profile_img"><img src="./img/smoochie.jpg" alt=""></div>
+                    <p class="username">Smoochie</p>
+                </div>
+                <div class="status">
+                    <div class="profile_img"><img src="./img/gummy.jpg" alt=""></div>
+                    <p class="username">Gummy_Pop</p>
+                </div>
+                <div class="status">
+                    <div class="profile_img"><img src="./img/ginger.jpg" alt=""></div>
+                    <p class="username">Gingersnap</p>
+                </div>
+                <div class="status">
+                    <div class="profile_img"><img src="./img/bubbble.jpg" alt=""></div>
+                    <p class="username">Bubble_Butt</p>
+                </div>
+                <div class="status">
+                    <div class="profile_img"><img src="./img/swiss.jpg" alt=""></div>
+                    <p class="username">Swiss_Miss</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
