post and follow hover btn

--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
             <div class="right_side">
                 <div class="profile-card">
                     <div class="profile_img">
-                        <img src="./img/gummy.jpg" alt="">
+                        <img src="./img/wolf.jpg" alt="">
                     </div>
                     <div>
-                        <p class="username">Gummy_Pop</p>
+                        <p class="username">Wolfie</p>
                         <p class="info_text">Lorem, ipsum dolor.</p>
                     </div>
                     <button class="action_btn">switch</button>
