--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <i class="icon save fa-regular fa-bookmark"></i>
                         </div>
                         <p class="like">500 likes</p>
-                        <p class="des"><span>Bob_Pancakes</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, ea. Eius sed earum quasi iusto.</p>
+                        <p class="des"><span>Bob_Pancakes</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, ea. Eius sed earum quasi Lorem, ipsum dolor.</p>
                         <p class="time">30 minutes ago</p>
                     </div>
                     <div class="comment_container">
